--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menu_background"
-    tools:context="eamv.dmu17he.lancrewapp.activities.MenuActivity">
+    tools:context="eamv.dmu17he.lancrewapp.activities.MainActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -15,6 +14,7 @@
         android:text="@string/main"
         android:textSize="36dp"
         android:textColor="#000"
+
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,9 +28,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="120dp"
         android:text="@string/wakeup"
-        android:textSize="26dp"
-        android:fontFamily="@font/kabrio"
-        android:background="@drawable/button_rounded_corners"
+        android:textSize="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -45,11 +43,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="170dp"
         android:layout_marginTop="120dp"
-        android:background="@drawable/button_rounded_corners"
-        android:fontFamily="@font/kabrio"
-        android:onClick="goToScheduleActivity"
         android:text="@string/schedule"
-        android:textSize="26dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,15 +53,11 @@
         android:id="@+id/contacts"
         android:layout_width="155dp"
         android:layout_height="155dp"
-        android:layout_marginBottom="79dp"
+        android:layout_marginBottom="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="170dp"
         android:layout_marginTop="280dp"
-        android:background="@drawable/button_rounded_corners"
-        android:fontFamily="@font/kabrio"
-        android:onClick="goToContactsActivity"
         android:text="@string/contact"
-        android:textSize="26dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,15 +67,11 @@
         android:id="@+id/messages"
         android:layout_width="155dp"
         android:layout_height="155dp"
-        android:layout_marginBottom="79dp"
+        android:layout_marginBottom="80dp"
         android:layout_marginEnd="170dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="280dp"
-        android:background="@drawable/button_rounded_corners"
-        android:fontFamily="@font/kabrio"
-        android:onClick="goToMessagesActivity"
         android:text="@string/message"
-        android:textSize="26dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,10 +84,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/button_rounded_corners"
-        android:fontFamily="@font/kabrio"
-        android:onClick="goToProfileActivity"
-        android:text="@string/Profileheadline"
+        android:text="Click"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent" />
