--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorText">#FFFFFF</color>
+    <color name="colorText">#000000</color>
     <color name="colorTextHint">#51d8c7</color>
-    <color name="colorBackground">#5f92ff</color>
+    <color name="colorBackground">#ffffff</color>
     <color name="chatcolor1">#d8dbed</color>
     <color name="chatcolor2">#f6c5d5</color>
 </resources>
