--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -143,6 +143,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:gravity="center"
+            android:onClick="goToLoginActivity"
             android:text="@string/text_member"
             android:textSize="16sp"
             android:textColor="@color/colorText" />
