--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -27,6 +27,7 @@
         android:layout_marginEnd="170dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="120dp"
+        android:onClick="goToWakeUpActivity"
         android:text="@string/wakeup"
         android:textSize="26dp"
         android:fontFamily="@font/kabrio"
