--- a/app/src/main/res/drawable/button_rounded_corners.xml
+++ b/app/src/main/res/drawable/button_rounded_corners.xml
@@ -4,7 +4,7 @@
     <shape android:shape="rectangle">
         <corners android:radius="15dp"/>
         <stroke android:width="2dp"/>
-        <gradient android:angle="-90" android:startColor="#92d7de" android:endColor="#ffffff"/>
+        <gradient android:angle="-90" android:startColor="#ffffff" android:endColor="#ffffff"/>
     </shape>
 </item>
 </selector>
