--- a/app/src/main/res/drawable/menu_background.xml
+++ b/app/src/main/res/drawable/menu_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <gradient android:angle="-90" android:startColor="#ffffff" android:endColor="#847d7d"/>
+        <gradient android:angle="-90" android:startColor="#3F51B5" android:endColor="#3F51B5"/>
     </shape>
 
 </item>
