--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorBackground">#ffffff</color>
     <color name="chatcolor1">#d8dbed</color>
     <color name="chatcolor2">#f6c5d5</color>
+    <color name="buttoncolor">#d8dbed</color>
 </resources>
